section1 fix aligns

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,11 +146,16 @@ h1 {
 }
 
 .first-section-container {
-    padding: 188px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .first-section-header {
     max-width: 496px;
+    margin-bottom: 48px;
 }
 /* #endregion */
 /* #region Second section */
